<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context="sssundar.reva.boogie.DoodlerActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@color/black"
        android:orientation="horizontal"
        android:divider="@drawable/spacer_medium"
        android:showDividers="middle" >

        <ImageButton
            android:id="@+id/erase_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/erase"
            android:orientation="vertical"
            android:background="@null"
            android:enabled="true"
            android:src="@drawable/eraser_selector" />

        <ImageButton
            android:id="@+id/call_amma_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/call_amma"
            android:enabled="false"
            android:orientation="vertical"
            android:background="@null"
            android:src="@drawable/call_amma_selector" />

        <ImageButton
            android:id="@+id/call_balu_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/call_balu"
            android:enabled="false"
            android:orientation="vertical"
            android:background="@null"
            android:src="@drawable/call_balu_selector" />

        <ImageButton
            android:id="@+id/call_sush_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/call_sush"
            android:enabled="false"
            android:orientation="vertical"
            android:background="@null"
            android:src="@drawable/call_sush_selector" />

        <ImageButton
            android:id="@+id/call_issue_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/call_issue"
            android:enabled="false"
            android:orientation="vertical"
            android:background="@null"
            android:src="@drawable/cant_hear_you_selector" />

        <ImageButton
            android:id="@+id/hang_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/end_call"
            android:enabled="false"
            android:orientation="vertical"
            android:background="@null"
            android:src="@drawable/phone_hung_up_selector" />

    </LinearLayout>

    <sssundar.reva.boogie.DrawingView
        android:id="@+id/doodler"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:background="@color/white" />

</LinearLayout>